<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="127dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/Porcentaje"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:text="@string/Porcentaje" />

    <TextView
        android:id="@+id/txtPorcentaje5"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:text="@string/Porcentaje4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre5"
        tools:text="@string/Porcentaje4" />

    <TextView
        android:id="@+id/txtNombre5"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="39dp"
        android:text="@string/Juan"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje4"
        tools:text="@string/Juan" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="37dp"
        android:text="@string/Nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="@string/Nombre" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="127dp"
        android:layout_height="33dp"
        android:layout_marginTop="11dp"
        android:text="@string/Porcentaje"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/Porcentaje" />

    <TextView
        android:id="@+id/txtPorcentaje4"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/Porcentaje3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre4"
        tools:text="@string/Porcentaje3" />

    <TextView
        android:id="@+id/txtNombre4"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="22dp"
        android:text="@string/Edith"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="26dp"
        android:text="@string/Nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/Nombre" />

    <TextView
        android:id="@+id/txtPorcentaje2"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/Porcentaje2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre2"
        tools:text="@string/Porcentaje2" />

    <TextView
        android:id="@+id/txtNombre2"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="84dp"
        android:text="@string/María"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje"
        tools:text="@string/María" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="84dp"
        android:text="@string/Nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/Nombre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="127dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/Porcentaje"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/Porcentaje" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/caras3"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/caras4"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/caras5"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txtPorcentaje"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginTop="52dp"
        android:text="@string/Porcentaje1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        tools:text="@string/Porcentaje1" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/Héctor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Héctor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="127dp"
        android:layout_height="33dp"
        android:layout_marginTop="52dp"
        android:text="@string/Porcentaje"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/Porcentaje" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="129dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/caras2"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:text="@string/Nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pasarAlCliente"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>